--- a/FitCalendar/templates/authorization.html
+++ b/FitCalendar/templates/authorization.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 <form method="POST">
-    <h2>Регистрация</h2>
+    <h2>Вход</h2>
     {% csrf_token %}
     {% for f in form %}
     <p><label for="{{ f.id_for_label }}">{{f.label}}</label>{{f}}</p>
     <p> <div>{{f.errors}}</div></p>
     {% endfor %}
-    <button type="submit">Регистрация</button>
+    <button type="submit">Вход</button>
 </form>
 {% endblock %}
