--- a/FitCalendar/templates/product.html
+++ b/FitCalendar/templates/product.html
@@ -1,5 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
+<a href="{% url 'Vitamins'%}">Витамины</a> 
+{% if request.user.is_authenticated %}
+<a href="{% url 'new_product' %}">Добавить новый продукт</a>
+{% endif %}
+    {% for p in object_list  %}
+        <h3>{{p.name}}</h3>
+       {% if p.photo %}
+       <img src="{{p.photo.url}}"  width="700px" height="640px">
+        {% endif %}
+      
+        <p>{{p.descriptions}}</p>
+        <h4>Химический состав на 100 гр. продукта</h4>
+        <p>Жиры: {{p.fats}}</p>
+        <p>Белки: {{p.proteins}}</p>
+        <p>Углеводы: {{p.carbohydrates}}</p>
+        {% if request.user.is_authenticated %}
+        <a href='#'>Изменить продукт</a>
+        <a href="#">Удалить продукт</a>
+        <a href='#'>Добавить в корзину еды</a>
+        {% endif %}
+        <hr>
+    {% endfor %}
 {% endblock %}
